@@ -32,20 +32,33 @@ from Products.CPSUtil.id import generateId
 
 from wikiparserinterface import WikiParserInterface
 
+from zLOG import LOG, DEBUG
+
+LOG_KEY = 'CPSWiki.baseparser'
+
+# TODO: The regexp should be compiled for the code to be faster
+
 # constants
 urlchars = r'[A-Za-z0-9/:@_%~#=&\.\-\?\+\$,]+'
-urlendchar  = r'[A-Za-z0-9/]'
-url = r'["=]?((about|gopher|http|https|ftp|mailto|file):%s)' % urlchars
+
+# All the kinds of URLs
+url = r'["=]?((about|http|https|ftp|mailto|file):%s)' % urlchars
+# All the letters ASCII and unicode in upper-case
 U = 'A-Z\xc0-\xdf'
+# All the letters ASCII and unicode in lower-case
 L = 'a-z\xe0-\xff'
+# Using a negative lookbehind assertion (?<!...)
 b = '(?<![%s0-9])' % (U+L)
-bracketedexpr = r'\[([^\n\]]+)\]'
-wikiname1 = r'(?L)%s[%s]+[%s]+[%s][%s]*[0-9]*' % (b,U,L,U,U+L)
-wikiname2 = r'(?L)%s[%s][%s]+[%s][%s]*[0-9]*'  % (b,U,U,L,U+L)
-wikilink  = r'!?(%s|%s|%s|%s)' % (wikiname1,wikiname2,bracketedexpr,url)
+
+# XXX: Give some examples and explain what the names mean!
+# [xxx] but not [[xxx]] or [xxx[xxx] or [xxx]xxx]
+bracketedexpr = r'\[([^][\n]+)\]'
+wikiname1 = r'(?L)%s[%s]+[%s]+[%s][%s]*[0-9]*' % (b, U, L, U, U+L)
+wikiname2 = r'(?L)%s[%s][%s]+[%s][%s]*[0-9]*'  % (b, U, U, L, U+L)
+wikilink  = r'!?(%s|%s|%s|%s)' % (wikiname1, wikiname2, bracketedexpr, url)
 
 class BaseParser:
-    __implements__ = (WikiParserInterface, )
+    __implements__ = (WikiParserInterface,)
 
     wiki = None
     linked_pages = []
@@ -54,22 +67,20 @@ class BaseParser:
         return 'baseparser'
 
     def parseContent(self, wiki, content):
-        """ creates link with founded [pages]
+        """Create links with found [pages].
         """
         self.wiki = wiki
         self.linked_pages = []
+        # A regexp can be with either a replacement string or a replacement
+        # function.
         rendered = re.sub(wikilink, self._wikilinkReplace, content)
         return self.linked_pages, rendered
 
-    def _wikilinkReplace(self, match, text=''):
-        # tasty spaghetti regexps! better suggestions welcome ?
-        """
-        Replace an occurrence of the wikilink regexp or one of the
-        special [] constructs with a suitable hyperlink
+    def _wikilinkReplace(self, match):
+        """Replace an occurrence of the wikilink regexp or one of the
+        special [] constructs with a suitable hyperlink.
 
-        To be used as a re.sub repl function *and* get a proper value
-        for literal context, 'allowed', etc, enclose this function
-        with the value using 'thunk_substituter'.
+        The argument match is a re MatchObject.
         """
         # matches beginning with ! should be left alone
         if re.match('^!', match.group(0)):
@@ -80,10 +91,9 @@ class BaseParser:
         stripped_label = m.strip('[').strip(']')
         m_nospace = generateId(stripped_label, lower=False)
 
-        # if it's a bracketed expression,
+        # If it's a bracketed expression
         if re.match(bracketedexpr, m):
-
-            # strip the enclosing []'s
+            # Strip the enclosing []'s
             m = re.sub(bracketedexpr, r'\1', m)
 
             # extract a (non-url) path if there is one
@@ -104,7 +114,7 @@ class BaseParser:
 
         wiki = self.wiki
 
-        # if it's an ordinary url, link to it
+        # If it's an ordinary url, link to it
         if re.match(url, m):
             # except, if preceded by " or = it should probably be left alone
             if re.match('^["=]', m):     # "
@@ -112,16 +122,12 @@ class BaseParser:
             else:
                 return '<a href="%s">%s</a>' % (m, m)
 
-        # it might be a structured text footnote ?
+        # It might be a structured text footnote?
         search_m = m
         for re_specialchar in '.^$*+?':
             search_m = search_m.replace(re_specialchar, '\%s' % re_specialchar)
 
-        if re.search(r'(?si)<a name="%s"' % search_m, text):
-            return '<a href="#%s">[%s]</a>' % (m, m)
-
-        # a wikiname - if a page (or something) of this name exists, link to
-        # it
+        # If a page (or something) of this name exists, link to it
         if (wiki is not None) and (m_nospace in wiki.objectIds()):
             if m_nospace not in self.linked_pages:
                 self.linked_pages.append(m_nospace)
